--- a/app/public/templates/themes/default.html
+++ b/app/public/templates/themes/default.html
@@ -9,11 +9,13 @@
             <span data-bind="text: project" class="project"></span>
             <span data-bind="text: definition, visible: definition" class="definition project-definition-separator"></span>
           </span>
-          <span class="reason-block prio-horizontal-two">
-            <span class="reason-icon middle fa fa-cog"></span>
-            <span data-bind="text: reason" class="middle reason"></span>
-          </span>
         </div>
+       
+        <div class="clear"></div>
+        <span class="reson-block medium-height">
+          <span data-bind="text: reason" class="reason"></span>
+        </span>
+
         <div class="clear"></div>
         <div class="medium-height nowrap prio-vertical-one">
           <span data-bind="text: statusText" class="middle status"></span>
